fix(release): publish correctly to github (#2141)
## Describe your changes

- Fix commit to GitHub
Turns out we don't have access to the full repo by default, have to
fetch and checkout the proper branch and setup an author. You can check
the commit it created on this branch
https://github.com/NangoHQ/nango/pull/2141/commits/4ab23d2861881734717397cd2df41118847c9717

---------

Co-authored-by: Release Bot <actions@contact@nango.dev>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,4 +35,4 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  npx zx ./scripts/gitrelease.mjs ${{ inputs.version }} ${{ github.head_ref || github.ref_name }}
+                  npx zx ./scripts/gitrelease.mjs "${{ inputs.version }}" "${{ github.head_ref || github.ref_name }}"
