--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   token: ${{ secrets.GH_PAT }}
+                  fetch-depth: 0
 
             - uses: actions/setup-node@v4
               with:
