--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -31,14 +31,17 @@
         "@geist-ui/core": "2.3.8",
         "@geist-ui/icons": "1.0.2",
         "@heroicons/react": "2.0.18",
-        "@mantine/core": "6.0.11",
+        "@mantine/core": "7.9.0",
         "@mantine/prism": "5.10.5",
         "@nangohq/frontend": "^0.39.26",
         "@nangohq/server": "file:../server",
         "@nangohq/types": "^0.39.26",
+        "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-popover": "1.0.7",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
+        "@tanstack/react-table": "8.16.0",
         "@testing-library/react": "13.4.0",
         "@testing-library/user-event": "13.5.0",
         "@types/lodash": "4.17.0",
@@ -68,6 +71,7 @@
         "tailwind-merge": "2.2.1",
         "tailwindcss": "3.2.7",
         "typescript": "4.9.5",
+        "vaul": "0.9.1",
         "web-vitals": "2.1.4",
         "webpack": "5.90.3",
         "zustand": "4.3.9"
