--- a/tsconfig.docker.json
+++ b/tsconfig.docker.json
@@ -26,6 +26,9 @@
             "path": "packages/runner"
         },
         {
+            "path": "packages/scheduler"
+        },
+        {
             "path": "packages/server"
         },
         {
