--- a/packages/scheduler/package.json
+++ b/packages/scheduler/package.json
@@ -19,7 +19,7 @@
     "dependencies": {
         "@nangohq/utils": "file:../utils",
         "knex": "3.1.0",
-        "uuidv7": "^0.6.3"
+        "uuidv7": "0.6.3"
     },
     "devDependencies": {
         "vitest": "0.33.0"
