--- a/packages/scheduler/tsconfig.json
+++ b/packages/scheduler/tsconfig.json
@@ -5,5 +5,5 @@
         "outDir": "dist"
     },
     "references": [{ "path": "../utils" }],
-    "include": ["lib/**/*"]
+    "include": ["lib/**/*", "../utils/lib/vitest.d.ts"]
 }
