--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -21,5 +21,5 @@
             "path": "../records"
         }
     ],
-    "include": ["lib/**/*"]
+    "include": ["lib/**/*", "../utils/lib/vitest.d.ts"]
 }
