--- a/packages/node-client/package.json
+++ b/packages/node-client/package.json
@@ -36,6 +36,7 @@
         "README.md"
     ],
     "devDependencies": {
-        "tsup": "^7.2.0"
+        "tsup": "^7.2.0",
+        "vitest": "^0.33.0"
     }
 }
