fix(db): add extensions to search_path (#2143)
### Describe your changes

Self-hosted using Supabase/Postgres also needs `extensions` in
`search_path` to access `uuid_generate_v4`, else migrations fail.

* Add `extensions` to `search_path`

## Issue ticket number and link
* References NAN-757
* Ref https://github.com/NangoHQ/nango/pull/2002 which added `public`
* [Slack
thread](https://nango-community.slack.com/archives/C04ABR352H0/p1715620108454379)

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)

Unsure how I'd test this, but given the ~same change didn't have tests,
I'm hoping this is OK.

---

Docker logs pointing at problem:
```
2024-05-11 13:21:41 Node.js v20.12.2
2024-05-11 13:21:48 2024-05-11T20:21:48.268Z [INFO] [Server] Migrating database ...
2024-05-11 13:21:48 migration file "20230324135032_alter_secret_from_account.cjs" failed
2024-05-11 13:21:48 migration failed with error: alter table "_nango_accounts" alter column "secret_key" set default uuid_generate_v4() - function uuid_generate_v4() does not exist
2024-05-11 13:21:51 2024-05-11T20:21:51.994Z [INFO] [Server] Migrating database ...
2024-05-11 13:21:52 migration file "20230324135032_alter_secret_from_account.cjs" failed
2024-05-11 13:21:52 migration failed with error: alter table "_nango_accounts" alter column "secret_key" set default uuid_generate_v4() - function uuid_generate_v4() does not exist
2024-05-11 13:21:56 2024-05-11T20:21:56.083Z [INFO] [Server] Migrating database ...
2024-05-11 13:21:56 migration file "20230324135032_alter_secret_from_account.cjs" failed
2024-05-11 13:21:56 migration failed with error: alter table "_nango_accounts" alter column "secret_key" set default uuid_generate_v4() - function uuid_generate_v4() does not exist
2024-05-11 13:21:45 node:internal/process/esm_loader:34
2024-05-11 13:21:45       internalBinding('errors').triggerUncaughtException(
2024-05-11 13:21:45                               

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@
 # NANGO_DB_PORT=<PICK-A-PORT>
 # NANGO_DB_NAME=<PICK-A-DB-NAME>
 # NANGO_DB_SCHEMA=<PICK-A-SCHEMA-NAME>
+# NANGO_DB_ADDITIONAL_SCHEMAS=<PICK-A-SEARCH-PATH>,<PICK-ANOTHER-SEARCH-PATH>
 # NANGO_DB_SSL=<PICK-TRUE-OR-FALSE>
 # Override these 2 variables to configure the database connection pool / tune it for your needs i.e. serverless databases.
 # NANGO_DB_POOL_MIN=<PICK-INT-OR-SKIP>
