--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -79,6 +79,7 @@
         "@types/simple-oauth2": "^4.1.1",
         "@types/uuid": "^8.3.4",
         "@types/ws": "^8.5.4",
+        "get-port": "7.1.0",
         "nodemon": "^3.0.1",
         "typescript": "^5.3.3",
         "vitest": "0.33.0"
