feat: introduces the orchestra API and client
The conductor is a new service that is running the scheduler and expose
the API (via a client) to execute webhooks/actions, schedule syncs (TBA), and fetch queued tasks (TBD)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "packages/server",
         "packages/runner",
         "packages/scheduler",
+        "packages/conductor",
         "packages/persist",
         "packages/jobs",
         "packages/webapp",
@@ -43,12 +44,13 @@
         "server:dev:watch": "cd ./packages/server && npm run dev",
         "jobs:dev:watch": "npm run dev -w @nangohq/nango-jobs",
         "persist:dev:watch": "npm run dev -w @nangohq/nango-persist",
+        "conductor:dev:watch": "npm run dev -w @nangohq/nango-conductor",
         "webapp:dev:watch": "cd ./packages/webapp && npm run start:hosted",
         "prepare": "husky install",
         "build:watch": "tsc -b -w --preserveWatchOutput tsconfig.build.json",
         "dev:watch": "npm run -w nango copy:files && npm run build:watch",
         "watch:dev": "npm run dev:watch",
-        "dev:watch:apps": "concurrently --kill-others \"npm run server:dev:watch\" \"npm run webapp:dev:watch\" \"npm run jobs:dev:watch\" \"npm run persist:dev:watch\"",
+        "dev:watch:apps": "concurrently --kill-others \"npm run server:dev:watch\" \"npm run webapp:dev:watch\" \"npm run jobs:dev:watch\" \"npm run persist:dev:watch\" \"npm run conductor:dev:watch\"",
         "watch:dev:apps": "npm run dev:watch:apps",
         "dw": "npm run dev:watch",
         "dwa": "npm run dev:watch:apps",
