--- a/tsconfig.docker.json
+++ b/tsconfig.docker.json
@@ -29,6 +29,9 @@
             "path": "packages/scheduler"
         },
         {
+            "path": "packages/conductor"
+        },
+        {
             "path": "packages/server"
         },
         {
