--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,7 @@
         "@nangohq/shared": "file:../shared",
         "@nangohq/types": "^0.39.28",
         "@nangohq/utils": "file:../utils",
+        "@nangohq/nango-orchestra": "file:../orchestra",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
         "body-parser": "1.20.2",
