--- a/tsconfig.docker.json
+++ b/tsconfig.docker.json
@@ -29,7 +29,7 @@
             "path": "packages/scheduler"
         },
         {
-            "path": "packages/conductor"
+            "path": "packages/orchestra"
         },
         {
             "path": "packages/server"
