--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,6 +22,7 @@
         "zod": "3.22.4"
     },
     "devDependencies": {
+        "@nangohq/types": "file:../types",
         "rimraf": "3.0.2",
         "vitest": "0.33.0"
     },
