--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "packages/server",
         "packages/runner",
         "packages/scheduler",
-        "packages/orchestra",
+        "packages/orchestrator",
         "packages/persist",
         "packages/jobs",
         "packages/webapp",
@@ -44,13 +44,13 @@
         "server:dev:watch": "cd ./packages/server && npm run dev",
         "jobs:dev:watch": "npm run dev -w @nangohq/nango-jobs",
         "persist:dev:watch": "npm run dev -w @nangohq/nango-persist",
-        "orchestra:dev:watch": "npm run dev -w @nangohq/nango-orchestra",
+        "orchestrator:dev:watch": "npm run dev -w @nangohq/nango-orchestrator",
         "webapp:dev:watch": "cd ./packages/webapp && npm run start:hosted",
         "prepare": "husky install",
         "build:watch": "tsc -b -w --preserveWatchOutput tsconfig.build.json",
         "dev:watch": "npm run -w nango copy:files && npm run build:watch",
         "watch:dev": "npm run dev:watch",
-        "dev:watch:apps": "concurrently --kill-others \"npm run server:dev:watch\" \"npm run webapp:dev:watch\" \"npm run jobs:dev:watch\" \"npm run persist:dev:watch\" \"npm run orchestra:dev:watch\"",
+        "dev:watch:apps": "concurrently --kill-others \"npm run server:dev:watch\" \"npm run webapp:dev:watch\" \"npm run jobs:dev:watch\" \"npm run persist:dev:watch\" \"npm run orchestrator:dev:watch\"",
         "watch:dev:apps": "npm run dev:watch:apps",
         "dw": "npm run dev:watch",
         "dwa": "npm run dev:watch:apps",
