--- a/packages/orchestrator/package.json
+++ b/packages/orchestrator/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@nangohq/nango-orchestra",
+    "name": "@nangohq/nango-orchestrator",
     "version": "1.0.0",
     "type": "module",
     "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/NangoHQ/nango.git",
-        "directory": "packages/orchestra"
+        "directory": "packages/orchestrator"
     },
     "dependencies": {
         "@nangohq/scheduler": "file:../scheduler",
