--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,9 @@
     "files": [],
     "references": [
         {
+            "path": "packages/types"
+        },
+        {
             "path": "packages/cli"
         },
         {
