--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,9 @@ LOG_LEVEL=info
 
 TZ=UTC
 
+# Configure Temporal when running more than just the server
+TEMPORAL_ADDRESS=
+
 # Configure where integrations will be loaded from
 NANGO_INTEGRATIONS_FULL_PATH=
 
