--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,6 +57,7 @@
         "@babel/core": "^7.22.1",
         "@babel/preset-env": "^7.22.4",
         "@babel/preset-typescript": "^7.21.5",
+        "@nangohq/types": "^0.39.28",
         "@types/babel__traverse": "^7.20.1",
         "@types/babel-traverse": "^6.25.7",
         "@types/commander": "^2.12.2",
