[nan-793] update to match changed spec

--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -489,13 +489,6 @@ paths:
     /connection/metadata:
         post:
             description: Set custom metadata for the connection or connections. If updating multiple connections pass in an array of connection ids instead of a string.
-            parameters:
-                - name: provider_config_key
-                  in: query
-                  required: true
-                  description: The integration ID used to create the connection (aka Unique Key).
-                  schema:
-                      type: string
             requestBody:
                 required: true
                 content:
@@ -505,13 +498,21 @@ paths:
                             required:
                                 - metadata
                                 - connection_id
+                                - provider_config_key
                             properties:
                                 connection_id:
-                                    type: string
-                                    items:
-                                        type: string
+                                    oneOf:
+                                      - type: string
                                         example: "connection-123"
-                                    description: The connection ID used to set the metadata on. Accepts an array of connection ids as well
+                                        description: The connection ID used to set the metadata on.
+                                      - type: array
+                                        items:
+                                            type: string
+                                            example: "connection-123"
+                                        description: The connection IDs used to set the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                provider_config_key:
+                                    type: string
+                                    description: The integration ID used to create the connection (aka Unique Key).
                                 metadata:
                                     type: object
 
@@ -522,6 +523,22 @@ paths:
                         application/json:
                             schema:
                                 type: object
+                                properties:
+                                    connection_id:
+                                        oneOf:
+                                          - type: string
+                                            example: "connection-123"
+                                            description: The connection ID used to set the metadata on. Returns an array of connection ids if an array is passed in.
+                                          - type: array
+                                            items:
+                                                type: string
+                                                example: "connection-123"
+                                            description: The connection IDs used to set the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                    provider_config_key:
+                                        type: string
+                                        description: The integration ID used to create the connection (aka Unique Key).
+                                    metadata:
+                                        type: object
                 '400':
                     description: Invalid request
                     content:
@@ -533,13 +550,6 @@ paths:
                                         type: string
         patch:
             description: Edit custom metadata for the connection or connections (only overrides specified properties, not the entire metadata). If updating multiple connections pass in an array of connection ids instead of a string.
-            parameters:
-                - name: provider_config_key
-                  in: query
-                  required: true
-                  description: The integration ID used to create the connection (aka Unique Key).
-                  schema:
-                      type: string
             requestBody:
                 required: true
                 content:
@@ -549,13 +559,21 @@ paths:
                             required:
                                 - metadata
                                 - connection_id
+                                - provider_config_key
                             properties:
                                 connection_id:
-                                    type: string
-                                    items:
-                                        type: string
+                                    oneOf:
+                                      - type: string
                                         example: "connection-123"
-                                    description: The connection ID used to update the metadata on. Accepts an array of connection ids as well
+                                        description: The connection ID used to update the metadata on. Accepts an array of connection ids as well
+                                      - type: array
+                                        items:
+                                            type: string
+                                            example: "connection-123"
+                                        description: The connection IDs used to update the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                provider_config_key:
+                                    type: string
+                                    description: The integration ID used to create the connection (aka Unique Key).
                                 metadata:
                                     type: object
 
@@ -566,6 +584,22 @@ paths:
                         application/json:
                             schema:
                                 type: object
+                                properties:
+                                    connection_id:
+                                        oneOf:
+                                          - type: string
+                                            example: "connection-123"
+                                            description: The connection ID used to update the metadata on. Returns an array of connection ids if an array is passed in.
+                                          - type: array
+                                            items:
+                                                type: string
+                                                example: "connection-123"
+                                            description: The connection IDs used to update the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                    provider_config_key:
+                                        type: string
+                                        description: The integration ID used to create the connection (aka Unique Key).
+                                    metadata:
+                                        type: object
                 '400':
                     description: Invalid request
                     content:
